@@ -6,8 +6,10 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 import java.util.stream.IntStream;
+
+import static java.util.stream.Collectors.*;
 
 public class Board {
     private final List<List<Point>> points = new ArrayList<>();
@@ -15,23 +17,28 @@ public class Board {
     public Board(List<String> input) {
         input.stream()
                 .filter(StringUtils::isNotBlank)
-                .forEach(s -> points.add(Arrays.stream(StringUtils.split(s, " "))
-                        .map(Integer::valueOf)
-                        .map(Point::new)
-                        .collect(Collectors.toList())));
+                .forEach(s -> points.add(
+                        Arrays.stream(StringUtils.split(s, " "))
+                                .map(Integer::valueOf)
+                                .map(Point::new)
+                                .toList()));
     }
 
     public void mark(int i) {
-        points.forEach(l -> l.stream()
+        points.stream()
+                .flatMap(Collection::stream)
                 .filter(p -> p.getNumber() == i)
-                .forEach(Point::setMarked));
+                .forEach(Point::setMarked);
     }
 
     public boolean isBingo() {
         boolean hasRow = points.stream()
-                .anyMatch(l -> l.stream().allMatch(Point::isMarked));
+                .anyMatch(l -> l.stream()
+                        .allMatch(Point::isMarked));
         if (!hasRow) {
-            return IntStream.range(0, 5).anyMatch(i -> points.stream().allMatch(l -> l.get(i).isMarked()));
+            return IntStream.range(0, 5)
+                    .anyMatch(i -> points.stream()
+                            .allMatch(l -> l.get(i).isMarked()));
         }
         return true;
     }
@@ -39,7 +46,7 @@ public class Board {
     public int getUnmarkedSum() {
         return points.stream()
                 .flatMap(Collection::stream)
-                .filter(p -> !p.isMarked())
+                .filter(Predicate.not(Point::isMarked))
                 .mapToInt(Point::getNumber)
                 .sum();
     }
@@ -47,7 +54,7 @@ public class Board {
     @Override
     public String toString() {
         return points.stream()
-                .map(l -> l.stream().map(Point::toString).collect(Collectors.joining(" ")))
-                .collect(Collectors.joining("\n"));
+                .map(l -> l.stream().map(Point::toString).collect(joining(" ")))
+                .collect(joining("\n"));
     }
 }
